--- a/Pest_Scratch_CNN.ipynb
+++ b/Pest_Scratch_CNN.ipynb
@@ -67,7 +67,8 @@
         "colab": {}
       },
       "source": [
-        "import tensorflow as tf "
+        "import tensorflow as tf \n",
+        "import numpy as np\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -77,13 +78,25 @@
       "metadata": {
         "id": "mHBkPYS9qiM-",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f603e67a-ac14-4089-f963-392aafe7bd70"
       },
       "source": [
         "import keras as ks "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -100,7 +113,11 @@
       "metadata": {
         "id": "o5tE9Pib-4Aj",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "772c9e5f-9677-490c-ab45-205a6ced4090"
       },
       "source": [
         "from tensorflow.keras.models import Sequential\n",
@@ -114,8 +131,16 @@
         "from google.colab.patches import cv2_imshow\n",
         "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -139,7 +164,7 @@
         "colab": {}
       },
       "source": [
-        "import CreatePestImageData as dataset"
+        "import CreatePestImageData as Imagedataset"
       ],
       "execution_count": 0,
       "outputs": []
@@ -149,15 +174,15 @@
       "metadata": {
         "id": "7uc_shwei50n",
         "colab_type": "code",
-        "outputId": "227f1f3a-9c5f-4e09-fc8b-095b667404d4",
+        "outputId": "f12e6278-1325-4a6d-fe65-0c6cdc3c8da9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 118
         }
       },
       "source": [
         "file_list = drive.ListFile(\n",
-        "    {'q': \"'1wxUOYT3QR_gElCvZeUVMLm4gX4E622J4' in parents\"}).GetList()\n",
+        "    {'q': \"'1aXb25Wp9sG7mL6AQgYY9ElrGcERi95JU' in parents\"}).GetList()\n",
         "\n",
         "for f in file_list:\n",
         "    print('title: %s, id: %s' % (f['title'], f['id']))\n",
@@ -166,15 +191,17 @@
         "    f_ = drive.CreateFile({'id': f['id']})\n",
         "    f_.GetContentFile(fname)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "title: LABELS.zip, id: 1qlEY9HER-wXP1H-cwUa5K592nh0WJ1gV\n",
+            "title: LABELS.zip, id: 1Rr_6cmS07z_hDZ1FVX6GBhUgLWC7cMS0\n",
             "downloading to LABELS.zip\n",
-            "title: GREENPATROL_DB_V1.0.zip, id: 1JExB0h7mhC_tivK0xgL20RGZqtDW1Rq4\n",
-            "downloading to GREENPATROL_DB_V1.0.zip\n"
+            "title: GREENPATROL_DB_V1.0.zip, id: 1LrZaY2eXwTII9KqoTj2ZF4cvOkJI9q7V\n",
+            "downloading to GREENPATROL_DB_V1.0.zip\n",
+            "title: predefined_classes.txt, id: 1srJJMul6750VCSL2-z9KrJ_QN9i6WK5Y\n",
+            "downloading to predefined_classes.txt\n"
           ],
           "name": "stdout"
         }
@@ -196,12 +223,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab_type": "code",
+        "id": "uOtF8zwBir_r",
+        "colab": {}
+      },
+      "source": [
+        "import CreatePestImageData as Imagedataset"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "xbw_wss1_Mex",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "download_Pests = drive.CreateFile({'id': '1IrF6nrEx7NUZ9kNFsuWZdLJgTRPHwg2F'})\n"
+        "download_Pests = drive.CreateFile({'id': '1LrZaY2eXwTII9KqoTj2ZF4cvOkJI9q7V'})\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -214,7 +254,7 @@
         "colab": {}
       },
       "source": [
-        "download_Annotations = drive.CreateFile({'id': '1KsW4XPz3Kcy8s1HfKEBqob48snm3AfiN'})\n"
+        "download_Annotations = drive.CreateFile({'id': '1Rr_6cmS07z_hDZ1FVX6GBhUgLWC7cMS0'})\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -272,12 +312,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g1G8HHgR71kV",
+        "id": "rBbJbMShnGYO",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        " v = createImageDataset()"
+        "dataSet = Imagedataset.createImageDataset()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -290,7 +330,20 @@
         "colab": {}
       },
       "source": [
-        "dataSet = v.prepare_dataset('/Pests/LABELS' , class_object,   test_size=30)"
+        " dataSet.prepare_dataset('/Pests/LABELS' , class_object,   test_size=30)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0xEB_kr8oaF_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -303,7 +356,7 @@
         "colab": {}
       },
       "source": [
-        "(trainY , trainX) , (testY , testX ) = (train_set.trainY , train_set.trainX ) , (train_set.testY , train_set.testX )\n",
+        "(trainY , trainX) , (testY , testX ) = (dataSet.trainY , dataSet.trainX ) , (dataSet.testY , dataSet.testX )\n",
         "\n"
       ],
       "execution_count": 0,
@@ -317,7 +370,8 @@
         "colab": {}
       },
       "source": [
-        "!pip install tflearn "
+        "trainX  = trainX.astype(int)\n",
+        "testY  = testY.astype(int)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -330,10 +384,151 @@
         "colab": {}
       },
       "source": [
-        ""
+        "batch_size =len(trainX)\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tFTx__bdpbKz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3ceeb2a8-e1d0-489d-90ba-8fe9d948a275"
+      },
+      "source": [
+        "print(trainX.shape, trainY.shape,testY.shape )\n"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(16487, 32, 32, 3) (16487,) (30,)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CRi19b8jqCWT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "scaler = MinMaxScaler()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6EnoBfgoqOa1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "trainX_scaled = scaler.fit_transform(trainX.astype(np.float64))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2ClCofvzqdYL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "testX_scaled = scaler.fit_transform(testX.astype(np.float64))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y-UlTZ4GuNiM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "trainX = trainX.reshape((-1, 32, 32, 1)) / 255.\n",
+        "testX = testX.reshape((-1, 32, 32, 1)) / 255."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_WES9XnnrgVZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# define the model\n",
+        "model_with_conv = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Conv2D(32, (3,3), padding='same', activation=tf.nn.relu, input_shape=(32, 32, 1)),\n",
+        "    tf.keras.layers.MaxPooling2D((2, 2), strides=2),\n",
+        "    tf.keras.layers.Conv2D(64, (3,3), padding='same', activation=tf.nn.relu),\n",
+        "    tf.keras.layers.MaxPooling2D((2, 2), strides=2),\n",
+        "    tf.keras.layers.Flatten(),    \n",
+        "    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
+        "    #  10-node softmax layer, with each node representing a class of clothing.\n",
+        "    tf.keras.layers.Dense(10,  activation=tf.nn.softmax)\n",
+        "])\n",
+        " \n",
+        "# compile the model\n",
+        "model_with_conv.compile(optimizer='adam',\n",
+        "              loss='sparse_categorical_crossentropy',\n",
+        "              metrics=['accuracy'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "07mhoU9bsVj3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 390
+        },
+        "outputId": "89c0dc64-83ad-4f9b-859b-369dbfd9b861"
+      },
+      "source": [
+        "model_with_conv.fit(trainX, trainY, epochs=5)\n",
+        "model_with_conv.evaluate(testX,  testY, verbose=2)"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-66-93ae278f379f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel_with_conv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrainY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodel_with_conv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtestX\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mtestY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36m_method_wrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     64\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_method_wrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_in_multi_worker_mode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;31m# Running inside `run_distribute_coordinator` already.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[1;32m    813\u001b[0m           \u001b[0mworkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    814\u001b[0m           \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 815\u001b[0;31m           model=self)\n\u001b[0m\u001b[1;32m    816\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    817\u001b[0m       \u001b[0;31m# Container that configures and calls `tf.keras.Callback`s.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/data_adapter.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, x, y, sample_weight, batch_size, steps_per_epoch, initial_epoch, epochs, shuffle, class_weight, max_queue_size, workers, use_multiprocessing, model)\u001b[0m\n\u001b[1;32m   1110\u001b[0m         \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1111\u001b[0m         \u001b[0mdistribution_strategy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mds_context\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_strategy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1112\u001b[0;31m         model=model)\n\u001b[0m\u001b[1;32m   1113\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1114\u001b[0m     \u001b[0mstrategy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mds_context\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_strategy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/data_adapter.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, x, y, sample_weights, sample_weight_modes, batch_size, epochs, steps, shuffle, **kwargs)\u001b[0m\n\u001b[1;32m    280\u001b[0m             label, \", \".join(str(i.shape[0]) for i in nest.flatten(data)))\n\u001b[1;32m    281\u001b[0m       \u001b[0mmsg\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"Please provide data which shares the same first dimension.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 282\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    283\u001b[0m     \u001b[0mnum_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnum_samples\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Data cardinality is ambiguous:\n  x sizes: 49461\n  y sizes: 16487\nPlease provide data which shares the same first dimension."
+          ]
+        }
+      ]
     }
   ]
 }
