--- a/Pest_Classifier_CNN.ipynb
+++ b/Pest_Classifier_CNN.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/SrivenkateswaraRao/Research-Project/blob/master/Pest_Classifier_CNN1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SrivenkateswaraRao/Research-Project/blob/master/Pest_Classifier_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -115,9 +115,7 @@
         "from tensorflow.keras import backend as K\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "from google.colab.patches import cv2_imshow\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "\n"
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": null,
       "outputs": []
@@ -139,12 +137,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "fHGMrX6JUTrC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5i2-ylQeq31q",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "import CreatePestImageData as Imagedataset"
+        "import CreatePestImageData as Imagedataset\n",
+        "import SupportingFunctions as support"
       ],
       "execution_count": null,
       "outputs": []
@@ -157,15 +169,46 @@
         "colab": {}
       },
       "source": [
-        "file_list = drive.ListFile(\n",
-        "    {'q': \"'1MzurTS9xeNSss_hYgko4ATZ5qNVn45ty' in parents\"}).GetList()\n",
-        "\n",
-        "for f in file_list:\n",
-        "    print('title: %s, id: %s' % (f['title'], f['id']))\n",
-        "    fname = f['title']\n",
-        "    print('downloading to {}'.format(fname))\n",
-        "    f_ = drive.CreateFile({'id': f['id']})\n",
-        "    f_.GetContentFile(fname)"
+        "support.DownLoadFiles('1aXb25Wp9sG7mL6AQgYY9ElrGcERi95JU',drive)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N9NFw748XhfP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "support.Unzip('/content/GREENPATROL_DB_V3.0.zip','/content/Pest/Images')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G2ruA8aGbA7X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "support.fileCount('/content/Pest/Images')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0if4gfVSb_Tb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "RemoveFiles('/content/Pest/Labels')"
       ],
       "execution_count": null,
       "outputs": []
@@ -179,58 +222,6 @@
       },
       "source": [
         "import CreatePestImageData as Imagedataset"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xbw_wss1_Mex",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "download_Pests = drive.CreateFile({'id': '1wJw1Ci1OTUoKjiiT3lwWqwonTunGPMB1'})\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DTdb6rVDyJPo",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "download_Annotations = drive.CreateFile({'id': '1dYxm-yV2sCOxiQQSvzRY6-gKtlfo0WLH'})\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dpL39rEq0KEP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!unzip LABELS.zip -d '/Tomato-Pests'\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2LiIDPb80QUZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!unzip GREENPATROL_DB_V1.0.zip -d '/Tomato-Pests'\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -290,7 +281,7 @@
         "colab": {}
       },
       "source": [
-        " dataSet.prepare_dataset('/Tomato-Pests/LABELS' , class_object,   test_size=20)"
+        " dataSet.prepare_dataset('/content/Pest/Labels' ,'/content/Pest/Images/', class_object,   test_size=8000)"
       ],
       "execution_count": null,
       "outputs": []
@@ -347,7 +338,7 @@
         "model_with_conv = tf.keras.Sequential([\n",
         "    tf.keras.layers.Conv2D(32, (3,3), padding='same', activation=tf.nn.relu, input_shape=(32, 32, 3)),\n",
         "    tf.keras.layers.MaxPooling2D((2, 2), strides=2),\n",
-        "    tf.keras.layers.Conv2D(64, (3,3), padding='same', activation=tf.nn.relu),\n",
+        "    tf.keras.layers.Conv2D(64, (3,3), padding='same', activation=tf.nn.relu6),\n",
         "    tf.keras.layers.MaxPooling2D((2, 2), strides=2),\n",
         "    tf.keras.layers.Flatten(),    \n",
         "    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
@@ -384,7 +375,7 @@
         "colab": {}
       },
       "source": [
-        "model_with_conv.fit(trainX, trainY, epochs=20)\n"
+        "model_with_conv.fit(trainX, trainY, epochs=5)\n"
       ],
       "execution_count": null,
       "outputs": []
