--- a/Pest_Classifier_CNN.ipynb
+++ b/Pest_Classifier_CNN.ipynb
@@ -182,7 +182,7 @@
         "colab": {}
       },
       "source": [
-        "support.Unzip('/content/GREENPATROL_DB_V3.0.zip','/content/Pest/Images')"
+        "support.Unzip('/content/LABELS_V3.0.zip','/content/Tomato/Labels')"
       ],
       "execution_count": null,
       "outputs": []
@@ -195,7 +195,7 @@
         "colab": {}
       },
       "source": [
-        "support.fileCount('/content/Pest/Images')"
+        "support.fileCount('/content/Tomato/Labels')"
       ],
       "execution_count": null,
       "outputs": []
@@ -281,7 +281,7 @@
         "colab": {}
       },
       "source": [
-        " dataSet.prepare_dataset('/content/Pest/Labels' ,'/content/Pest/Images/', class_object,   test_size=8000)"
+        " dataSet.prepare_dataset('/content/Tomato/Labels' ,'/content/Tomato/Images/', class_object,   test_size=8000)"
       ],
       "execution_count": null,
       "outputs": []
@@ -313,6 +313,88 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "KcFHMVvs2V9x",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(trainX[1])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HLcEvzLl0ixQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "flipped_img = arr[1]\n",
+        "plt.imshow(flipped_img)\n",
+        "plt.show()\n",
+        "\n",
+        "plt.imshow(trainX[1])\n",
+        "plt.show()\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g5OcWTpr3DoQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "type(trainX)\n",
+        "arr1  = np.fliplr(trainX)\n",
+        "arr2 = np.flip(trainX)\n",
+        "arr3 = np.flipud(trainX)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DCue5S0P96eR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "additionX = np.concatenate((trainX,arr1,arr2,arr3), axis=0)\n",
+        "additionY = np.concatenate((trainY,trainY,trainY,trainY), axis=0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-hAXE_I067e1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(len(trainX))\n",
+        "print(len(arr))\n",
+        "print(len(additionX))\n",
+        "print(len(additionY))\n",
+        "print(additionY[48201])\n",
+        "print(additionY[96406])\n",
+        "print(additionY[144611])\n",
+        "print(additionY[192816])\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "HCBaBXRLD6C7",
         "colab_type": "code",
         "colab": {}
@@ -336,12 +418,12 @@
       "source": [
         "# define the model\n",
         "model_with_conv = tf.keras.Sequential([\n",
-        "    tf.keras.layers.Conv2D(32, (3,3), padding='same', activation=tf.nn.relu, input_shape=(32, 32, 3)),\n",
+        "    tf.keras.layers.Conv2D(64, (3,3), padding='same', activation=tf.nn.relu, input_shape=(32, 32, 3)),\n",
         "    tf.keras.layers.MaxPooling2D((2, 2), strides=2),\n",
-        "    tf.keras.layers.Conv2D(64, (3,3), padding='same', activation=tf.nn.relu6),\n",
+        "    tf.keras.layers.Conv2D(128, (3,3), padding='same', activation=tf.nn.relu),\n",
         "    tf.keras.layers.MaxPooling2D((2, 2), strides=2),\n",
         "    tf.keras.layers.Flatten(),    \n",
-        "    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
+        "    tf.keras.layers.Dense(256, activation=tf.nn.relu),\n",
         "    #  10-node softmax layer, with each node representing a class of clothing.\n",
         "    tf.keras.layers.Dense(10,  activation=tf.nn.softmax)\n",
         "])\n",
@@ -375,7 +457,7 @@
         "colab": {}
       },
       "source": [
-        "model_with_conv.fit(trainX, trainY, epochs=5)\n"
+        "model_with_conv.fit(additionX, additionY, epochs=5)\n"
       ],
       "execution_count": null,
       "outputs": []
