--- a/Pest_Classifier_CNN.ipynb
+++ b/Pest_Classifier_CNN.ipynb
@@ -7,7 +7,6 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -313,88 +312,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KcFHMVvs2V9x",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(trainX[1])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HLcEvzLl0ixQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "flipped_img = arr[1]\n",
-        "plt.imshow(flipped_img)\n",
-        "plt.show()\n",
-        "\n",
-        "plt.imshow(trainX[1])\n",
-        "plt.show()\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "g5OcWTpr3DoQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "type(trainX)\n",
-        "arr1  = np.fliplr(trainX)\n",
-        "arr2 = np.flip(trainX)\n",
-        "arr3 = np.flipud(trainX)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DCue5S0P96eR",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "additionX = np.concatenate((trainX,arr1,arr2,arr3), axis=0)\n",
-        "additionY = np.concatenate((trainY,trainY,trainY,trainY), axis=0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-hAXE_I067e1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(len(trainX))\n",
-        "print(len(arr))\n",
-        "print(len(additionX))\n",
-        "print(len(additionY))\n",
-        "print(additionY[48201])\n",
-        "print(additionY[96406])\n",
-        "print(additionY[144611])\n",
-        "print(additionY[192816])\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "HCBaBXRLD6C7",
         "colab_type": "code",
         "colab": {}
@@ -404,6 +321,50 @@
         "print(trainY.shape)\n",
         "print(testX.shape)\n",
         "print(testY.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pp7C6GPNom7T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def PrepareAugmentedData(trainX,trainY):\n",
+        "    arr1  = np.fliplr(trainX)\n",
+        "    resultX = np.concatenate((trainX,arr1), axis=0)\n",
+        "    resultY = np.concatenate((trainY,trainY), axis=0) \n",
+        "    return resultX, resultY\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N9Xu7OfZucpT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "(augTrainX,augTrainY) = PrepareAugmentedData(trainX,trainY) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ejIRpIl9xQW3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(augTrainX.shape)\n",
+        "print(augTrainY.shape)"
       ],
       "execution_count": null,
       "outputs": []
@@ -457,7 +418,7 @@
         "colab": {}
       },
       "source": [
-        "model_with_conv.fit(additionX, additionY, epochs=5)\n"
+        "model_with_conv.fit(augTrainX, augTrainY, epochs=50)\n"
       ],
       "execution_count": null,
       "outputs": []
