--- a/Pest_Classifier_CNN.ipynb
+++ b/Pest_Classifier_CNN.ipynb
@@ -7,6 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +83,7 @@
         "colab": {}
       },
       "source": [
-        "import keras as ks "
+        "import tensorflow.keras as ks "
       ],
       "execution_count": null,
       "outputs": []
@@ -136,19 +137,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fHGMrX6JUTrC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "5i2-ylQeq31q",
         "colab_type": "code",
         "colab": {}
@@ -181,7 +169,7 @@
         "colab": {}
       },
       "source": [
-        "support.Unzip('/content/LABELS_V3.0.zip','/content/Tomato/Labels')"
+        "support.Unzip('/content/GREENPATROL_DB_V3.0.zip','/content/Tomato/Images')"
       ],
       "execution_count": null,
       "outputs": []
@@ -194,7 +182,7 @@
         "colab": {}
       },
       "source": [
-        "support.fileCount('/content/Tomato/Labels')"
+        "support.fileCount('/content/Tomato/Images')"
       ],
       "execution_count": null,
       "outputs": []
@@ -413,12 +401,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Jkj_wTnapWZu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "    from tensorflow.keras.callbacks import Callback\n",
+        "    logs = Callback()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "07mhoU9bsVj3",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "model_with_conv.fit(augTrainX, augTrainY, epochs=50)\n"
+        "model_with_conv.fit(trainX, trainY,verbose=1, epochs=1,callbacks=[logs],validation_data=(testX,testY))\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -486,6 +488,32 @@
         " \n",
         "plt.tight_layout()\n",
         "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "96FnhlZ-qVgO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(model_with_conv.history.history.keys())\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EyTQSFR5r4R6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "val_acc = model_with_conv.history.history['val_loss']\n"
       ],
       "execution_count": null,
       "outputs": []
