--- a/Pest_Classifier_CNN.ipynb
+++ b/Pest_Classifier_CNN.ipynb
@@ -291,8 +291,7 @@
         "colab": {}
       },
       "source": [
-        "(trainY , trainX) , (testY , testX ) = (dataSet.trainY , dataSet.trainX ) , (dataSet.testY , dataSet.testX )\n",
-        "\n"
+        "(trainY , trainX) , (testY , testX ) = (dataSet.trainY , dataSet.trainX ) , (dataSet.testY , dataSet.testX )"
       ],
       "execution_count": null,
       "outputs": []
@@ -325,7 +324,7 @@
         "    arr1  = np.fliplr(trainX)\n",
         "    resultX = np.concatenate((trainX,arr1), axis=0)\n",
         "    resultY = np.concatenate((trainY,trainY), axis=0) \n",
-        "    return resultX, resultY\n"
+        "    return resultX, resultY"
       ],
       "execution_count": null,
       "outputs": []
@@ -420,20 +419,7 @@
         "colab": {}
       },
       "source": [
-        "model_with_conv.fit(trainX, trainY,verbose=1, epochs=1,callbacks=[logs],validation_data=(testX,testY))\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2-JixddZAYLz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "model_with_conv.evaluate(testX,  testY, verbose=2)"
+        "model_with_conv.fit(trainX, trainY,verbose=1, epochs=50,callbacks=[logs],validation_data=(testX,testY))\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -495,12 +481,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "96FnhlZ-qVgO",
+        "id": "EyTQSFR5r4R6",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(model_with_conv.history.history.keys())\n"
+        "acc = model_with_conv.history.history['accuracy']\n",
+        "val_accuracy = model_with_conv.history.history['val_accuracy']\n",
+        "loss  =  model_with_conv.history.history['loss']\n",
+        "val_loss = model_with_conv.history.history['val_loss']\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -508,12 +497,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EyTQSFR5r4R6",
+        "id": "-UIaq_5GqVt1",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "val_acc = model_with_conv.history.history['val_loss']\n"
+        "def GenerateGraphs(acc, val_acc, loss, val_loss):\n",
+        "     epochs = range(len(acc))\n",
+        "     plt.plot(epochs, acc, 'bo', label='Training accuracy')\n",
+        "     plt.plot(epochs, val_acc, 'b', label='Validation accuracy')\n",
+        "     plt.title('Training and validation accuracy')\n",
+        "     plt.figure()\n",
+        "     plt.plot(epochs, loss, 'bo', label='Training Loss')\n",
+        "     plt.plot(epochs, val_loss, 'b', label='Validation Loss')\n",
+        "     plt.title('Training and validation loss')\n",
+        "     plt.legend()\n",
+        "     plt.show()\n",
+        "    "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fqcrEje_qXY7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "GenerateGraphs(acc,val_accuracy,loss,val_loss)"
       ],
       "execution_count": null,
       "outputs": []
